k8s/apps/multimedia/sonarr/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/instance: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/instance: sonarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarr
          image: docker.io/linuxserver/sonarr:develop-version-4.0.0.445
          volumeMounts:
            - name: multimedia
              mountPath: /multimedia
            - name: sonarr-config
              mountPath: /config
          ports:
            - name: http
              containerPort: 8989
      volumes:
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
