k8s/apps/multimedia/sonarr/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: 8989
      protocol: TCP
